[gd_scene load_steps=25 format=3 uid="uid://bp2klddudgkav"]

[ext_resource type="Script" uid="uid://c3v3e5lt7b4l3" path="res://scenes/moster/butterfly.gd" id="1_wgdg4"]
[ext_resource type="Script" uid="uid://bhv07ig7mc223" path="res://scripts/detecting_area.gd" id="3_21p2d"]
[ext_resource type="Texture2D" uid="uid://dhmy2yy2klib8" path="res://assets/pictures/butterfly_sprite.png" id="3_wsltf"]
[ext_resource type="Script" uid="uid://ugpmfntl4pms" path="res://scripts/hurtbox.gd" id="4_0cgc5"]
[ext_resource type="Script" uid="uid://cfsmsiujxat5m" path="res://scripts/hitbox.gd" id="5_kju7k"]
[ext_resource type="PackedScene" uid="uid://bta45gmfb3gnr" path="res://scripts/visible_detection.tscn" id="6_u7ak4"]
[ext_resource type="Script" uid="uid://62xtjwiuudp2" path="res://scripts/stats.gd" id="6_x6jfy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vbe1y"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82vyn"]
size = Vector2(38, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_xnl4x"]
radius = 48.0521

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ilh7v"]
animation = &"chasing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hrfhg"]
animation = &"detecting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7x6cr"]
animation = &"wandering"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oh352"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_or53c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xk01p"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5pnw7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_drv5a"]
states/chasing/node = SubResource("AnimationNodeAnimation_ilh7v")
states/chasing/position = Vector2(676, 100)
states/detecting/node = SubResource("AnimationNodeAnimation_hrfhg")
states/detecting/position = Vector2(527, 195)
states/wandering/node = SubResource("AnimationNodeAnimation_7x6cr")
states/wandering/position = Vector2(355, 100)
transitions = ["Start", "wandering", SubResource("AnimationNodeStateMachineTransition_oh352"), "wandering", "detecting", SubResource("AnimationNodeStateMachineTransition_or53c"), "detecting", "chasing", SubResource("AnimationNodeStateMachineTransition_xk01p"), "chasing", "wandering", SubResource("AnimationNodeStateMachineTransition_5pnw7")]
graph_offset = Vector2(-146, 12)

[sub_resource type="Animation" id="Animation_0byte"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ly8a1"]
resource_name = "chasing"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_svyxp"]
resource_name = "detection"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_dohlk"]
resource_name = "wander"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3ugo"]
_data = {
&"RESET": SubResource("Animation_0byte"),
&"chasing": SubResource("Animation_ly8a1"),
&"detecting": SubResource("Animation_svyxp"),
&"wandering": SubResource("Animation_dohlk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8va8a"]
size = Vector2(38, 30)

[node name="Butterfly" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 32
script = ExtResource("1_wgdg4")
visible_radius = 30.0

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]
texture = ExtResource("3_wsltf")
hframes = 2
frame = 1

[node name="DetectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("3_21p2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource("CircleShape2D_vbe1y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11, 5)
shape = SubResource("RectangleShape2D_82vyn")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_0cgc5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_xnl4x")

[node name="DetectingTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_drv5a")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a3ugo")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("5_kju7k")
damage = 15.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(11, 5)
shape = SubResource("RectangleShape2D_8va8a")

[node name="Stats" type="Node" parent="."]
script = ExtResource("6_x6jfy")
metadata/_custom_type_script = "uid://62xtjwiuudp2"

[node name="VisibleDetection" parent="." instance=ExtResource("6_u7ak4")]

[connection signal="target_entered" from="DetectingArea" to="." method="enemy_detected"]
[connection signal="target_lost" from="DetectingArea" to="." method="enemy_lost"]
[connection signal="hurt" from="HurtBox" to="." method="hurt"]
[connection signal="timeout" from="DetectingTimer" to="." method="adjust"]
